{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 105,
  "lineage": "54314bc2-74b5-f1cd-9dc1-5c5c5e7181f7",
  "resources": [
    {
      "module": "module.runners.module.runners[\"linux-x64\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "runner_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:security-group/sg-0b8ce600f81b499c9",
            "description": "Github Actions Runner security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8ce600f81b499c9",
            "ingress": [],
            "name": "nf-core-linux-x64-github-actions-runner-sg20231005093523731800000002",
            "name_prefix": "nf-core-linux-x64-github-actions-runner-sg",
            "owner_id": "728131696474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nf-core-linux-x64-action-runner",
              "Project": "ProjectX",
              "ghr:environment": "nf-core-linux-x64",
              "ghr:ssm_config_path": "/github-action-runners/nf-core/linux-x64/runners/config"
            },
            "tags_all": {
              "Name": "nf-core-linux-x64-action-runner",
              "Project": "ProjectX",
              "ghr:environment": "nf-core-linux-x64",
              "ghr:ssm_config_path": "/github-action-runners/nf-core/linux-x64/runners/config"
            },
            "timeouts": null,
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.runners.aws_sqs_queue.queued_builds",
            "module.runners.aws_sqs_queue.queued_builds_dlq",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:network-acl/acl-0b70c5982e90757ad",
            "default_network_acl_id": "acl-0b70c5982e90757ad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b70c5982e90757ad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "728131696474",
            "subnet_ids": [
              "subnet-02e68a0bc35d8e11c",
              "subnet-048a942525bef47fc",
              "subnet-0a2a2be26922d4164",
              "subnet-0a2b323fd9af7ff21",
              "subnet-0c024c1c60330034f",
              "subnet-0c925df721f363493"
            ],
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:route-table/rtb-0ba4f5e41e3f813b0",
            "default_route_table_id": "rtb-0ba4f5e41e3f813b0",
            "id": "rtb-0ba4f5e41e3f813b0",
            "owner_id": "728131696474",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:security-group/sg-0cef68e195dd86359",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0cef68e195dd86359",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "728131696474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-default"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2881ae2354ace03",
            "association_id": "eipassoc-039e6d40c5563184a",
            "domain": "vpc",
            "id": "eipalloc-0f2881ae2354ace03",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0525b9082bab6c075",
            "private_dns": "ip-10-0-101-144.eu-central-1.compute.internal",
            "private_ip": "10.0.101.144",
            "public_dns": "ec2-3-77-105-118.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.105.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-eu-central-1a"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-eu-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:internet-gateway/igw-097e2c34f3b68ab86",
            "id": "igw-097e2c34f3b68ab86",
            "owner_id": "728131696474",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f2881ae2354ace03",
            "association_id": "eipassoc-039e6d40c5563184a",
            "connectivity_type": "public",
            "id": "nat-06eb1f7adbc3d6b2e",
            "network_interface_id": "eni-0525b9082bab6c075",
            "private_ip": "10.0.101.144",
            "public_ip": "3.77.105.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048a942525bef47fc",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-eu-central-1a"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-eu-central-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04ea3ae0eb03fad271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06eb1f7adbc3d6b2e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ea3ae0eb03fad27",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-097e2c34f3b68ab86",
            "id": "r-rtb-0f6b3820135b401f21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6b3820135b401f2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:route-table/rtb-04ea3ae0eb03fad27",
            "id": "rtb-04ea3ae0eb03fad27",
            "owner_id": "728131696474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06eb1f7adbc3d6b2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:route-table/rtb-0f6b3820135b401f2",
            "id": "rtb-0f6b3820135b401f2",
            "owner_id": "728131696474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097e2c34f3b68ab86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0731a1e24ba38ff48",
            "route_table_id": "rtb-04ea3ae0eb03fad27",
            "subnet_id": "subnet-02e68a0bc35d8e11c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3e831fa22c2a915",
            "route_table_id": "rtb-04ea3ae0eb03fad27",
            "subnet_id": "subnet-0a2b323fd9af7ff21"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0496642d819a28518",
            "route_table_id": "rtb-04ea3ae0eb03fad27",
            "subnet_id": "subnet-0a2a2be26922d4164"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033d09baec585e18b",
            "route_table_id": "rtb-0f6b3820135b401f2",
            "subnet_id": "subnet-048a942525bef47fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b4f850df4909501",
            "route_table_id": "rtb-0f6b3820135b401f2",
            "subnet_id": "subnet-0c925df721f363493"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e8a70cb703e7b71",
            "route_table_id": "rtb-0f6b3820135b401f2",
            "subnet_id": "subnet-0c024c1c60330034f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-02e68a0bc35d8e11c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e68a0bc35d8e11c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1a"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1a"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-0a2b323fd9af7ff21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2b323fd9af7ff21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1b"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1b"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-0a2a2be26922d4164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2a2be26922d4164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1c"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-private-eu-central-1c"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-048a942525bef47fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a942525bef47fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1a"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1a"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-0c925df721f363493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c925df721f363493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1b"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1b"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:subnet/subnet-0c024c1c60330034f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c024c1c60330034f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "728131696474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1c"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core-public-eu-central-1c"
            },
            "vpc_id": "vpc-091e14169e85221ff"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:728131696474:vpc/vpc-091e14169e85221ff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b70c5982e90757ad",
            "default_route_table_id": "rtb-0ba4f5e41e3f813b0",
            "default_security_group_id": "sg-0cef68e195dd86359",
            "dhcp_options_id": "dopt-4b3af521",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091e14169e85221ff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba4f5e41e3f813b0",
            "owner_id": "728131696474",
            "tags": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core"
            },
            "tags_all": {
              "Environment": "nf-core",
              "Name": "vpc-nf-core"
            }
          }
        }
      ]
    }
  ]
}